kubernetes/gitlab-system/overlays/k3s/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: gitlab-system
  labels:
    app.kubernetes.io/instance: gitlab-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab-system
  labels:
    app.kubernetes.io/instance: gitlab-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: "Host(`gitlab.<path:secret/data/gitlab/domain#url>`)"
      kind: Rule
      services:
        - name: gitlab
          port: 443
      middlewares:
        - name: https-redirect
  tls:
    domains:
      - main: gitlab.<path:secret/data/gitlab/domain#url>
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  entryPoints:
    - registry
  routes:
    - match: "HostSNI(`gitlab.<path:secret/data/gitlab/domain#url>`)"
      services:
        - name: gitlab
          port: 5050
  tls:
    domains:
      - main: gitlab.<path:secret/data/gitlab/domain#url>
    passthrough: true
